buy sell page works

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -1,7 +1,7 @@
 ---
 layout: none
-permalink: /stocks/home
-title: Stocks Home
+permalink: /stocks/buysell
+title: Stocks Buy/Sell
 ---
 <html lang="en">
 <head>
@@ -44,48 +44,6 @@ title: Stocks Home
         .navbar .nav-buttons a:hover {
             background-color: #ff8c00; /* Orange hover effect */
         }
-        .dashboard {
-            padding: 20px;
-            display: flex;
-            justify-content: flex-start;
-            gap: 40px;
-        }
-        .dashboard-content {
-            width: 70%; /* Increased width for the left side */
-        }
-        .sidebar {
-            width: 25%; /* Width for the right side */
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-        .stock-table, .your-stocks {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .your-stocks, .stock-table {
-            height: 300px; /* Height for tables */
-        }
-        .stock-table table, .your-stocks table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .stock-table table, th, td, .your-stocks table, th, td {
-            border: none; /* Removed the border to make it invisible */
-        }
-        .stock-table th, td, .your-stocks th, td {
-            padding: 10px;
-            text-align: left;
-        }
-        .stock-table th, .your-stocks th {
-            background-color: #f2f2f2;
-        }
-        .welcome {
-            font-size: 24px;
-            font-weight: bold;
-        }
         .summary-cards {
             display: flex;
             justify-content: space-between;
@@ -93,7 +51,7 @@ title: Stocks Home
         }
         .card {
             padding: 0px;
-            margin: 10px;
+            margin: 30px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             flex: 1;
@@ -117,31 +75,52 @@ title: Stocks Home
             font-size: 36px;
             font-weight: bold;
         }
-        .chart-container {
-            position: relative;
-            background-color: #fff;
+        .main-content {
+            width: 80%;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-            display: flex;
-            gap: 20px;
         }
-        .chart {
-            height: 100%; /* Set height to 100% to fill the container */
-            width: 100%; /* Set height to 100% to fill the container */
-            background-color: #fff; /* Set the chart background to white */
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: #999;
+        .header h1 {
+            font-size: 2em;
+            font-weight: bold;
+            margin: 30px;
+        }
+        .header p {
+            color: #777;
+            margin-bottom: 20px;
+            margin: 30px;
+        }
+        .price-info h2 {
+            font-size: 2.5em;
+            font-weight: bold;
+            margin: 30px;
+        }
+        .change.negative {
+            color: #d32f2f; /* Red for negative change */
+            margin-left: 30px;
+        }
+        .change.positive {
+            color: #388e3c;
+            margin-left: 30px;
+        }
+        .metrics {
+                display: flex;
+            gap: 15px;
+            margin: 20px 0;
+        }
+        .metric {
+            background-color: #ffffff;
+                border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 4px;
+            text-align: center;
             flex: 1;
         }
         .search-container {
             margin-bottom: 20px; /* Add margin to space it out */
             display: flex;
+            margin-right: 30px; 
+            margin-left: 30px; 
+            margin-top: 30px; 
         }
         .search-container input[type="text"] {
             width: 100%; /* Full width of the graph */
@@ -164,6 +143,31 @@ title: Stocks Home
         .search-button:hover {
             background-color: #e07b00; /* Darker orange on hover */
         }
+        .chart-container {
+            position: relative;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+            display: flex;
+            gap: 20px;
+            margin-top: 30px; 
+            margin-right: 30px; 
+            margin-left: 30px; 
+        }
+        .chart {
+            height: 100%; /* Set height to 100% to fill the container */
+            width: 100%; /* Set height to 100% to fill the container */
+            background-color: #fff; /* Set the chart background to white */
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            color: #999;
+            flex: 1;
+        }
     </style>
 </head>
 <body>
@@ -179,99 +183,48 @@ title: Stocks Home
             <a href="#">Profile</a>
         </div>
     </nav>
-    <!-- Dashboard Content -->
-    <div class="dashboard">
-        <div class="dashboard-content">
-            <h1 class="welcome">Hi Rafael, Welcome Back</h1>
-            <p>Invest your money with small risk!</p>
-            <div class="summary-cards">
-                <div class="card card-orange">
-                    <h2>Today's Return</h2>
-                    <p>$39,345</p>
-                </div>
-                <div class="card card-purple">
-                    <h2>Total Return</h2>
-                    <p>$42,345</p>
-                </div>
-                <div class="card card-darkblue">
-                    <h2>Revenue Return</h2>
-                    <p>$52,345</p>
-                </div>
-            </div>
-            <div class="search-container">
+    <div class="search-container">
                <input type="text" id="searchBar" placeholder="Search...">
                <button class="search-button" onclick="getStockData()">Search</button> <!-- Search button added -->
-            </div>
-            <div class="chart-container" id="chartContainer">
+    </div>
+    <!-- Header -->
+      <div class="header">
+        <h1 id="stock-name">N/A</h1>
+        <p id="stock-symbol">NASDAQ: N/A</p>
+      </div>
+      <!-- Price Info -->
+      <div class="price-info">
+        <h2 id="stock-price">N/A</h2>
+        <p id="stock-change" class="change positive">N/A</p>
+      </div>
+    <div class="summary-cards">
+                <div class="card card-orange">
+                    <h2>Volume:</h2>
+                    <p id="volume">N/A</p>
+                </div>
+                <div class="card card-purple">
+                    <h2>Day High:</h2>
+                    <p id="day-high">N/A</p>
+                </div>
+                <div class="card card-darkblue">
+                    <h2>52-Week High:</h2>
+                    <p id="year-high">N/A</p>
+                </div>
+                <div class="card card-darkblue">
+                    <h2>Day Low:</h2>
+                    <p id="day-low">N/A</p>
+                </div>
+                <div class="card card-darkblue">
+                    <h2>52-Week Low:</h2>
+                    <p id="year-low">N/A</p>
+                </div>
+    </div>
+    <div class="chart-container" id="chartContainer">
                 <div class="chart" id="chart1">
                     <canvas id="stockChart" width="475" height="375">[Graph Placeholder]</canvas>
                 </div>
             </div>
             <div id="output" style="color: red; padding-top: 10px;"></div>
-        </div>
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- "Your Stocks" section with table -->
-            <div class="your-stocks">
-                <h3>Your Stocks</h3>
-                <table>
-                    <tr>
-                        <th>Stock</th>
-                        <th>Price</th>
-                    </tr>
-                    <tr>
-                        <td>Netflix</td>
-                        <td id="NetflixPrice">$4</td>
-                    </tr>
-                    <tr>
-                        <td>Tesla</td>
-                        <td id="TeslaPrice">$920,456</td>
-                    </tr>
-                    <tr>
-                        <td>Amazon</td>
-                        <td id="AmazonPrice">$1,123,987</td>
-                    </tr>
-                    <tr>
-                        <td>Adobe</td>
-                        <td id="AdobePrice">$670,345</td>
-                    </tr>
-                    <tr>
-                        <td>Nvidia</td>
-                        <td id="NvidiaPrice">$820,321</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="stock-table">
-                <h3>Stock Prices</h3>
-                <table>
-                    <tr>
-                        <th>Stock</th>
-                        <th>Price</th>
-                    </tr>
-                    <tr>
-                        <td>Spotify</td>
-                        <td id="SpotifyPrice">$297,408</td>
-                    </tr>
-                    <tr>
-                        <td>Apple</td>
-                        <td id="ApplePrice">$142,845</td>
-                    </tr>
-                    <tr>
-                        <td>Google</td>
-                        <td id="GooglePrice">$2,823,894</td>
-                    </tr>
-                    <tr>
-                        <td>Facebook</td>
-                        <td id="FacebookPrice">$208,123</td>
-                    </tr>
-                    <tr>
-                        <td>Microsoft</td>
-                        <td id="MicrosoftPrice">$330,456</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
     <script>
     let stockChart; // Declare stockChart globally
     async function getStockData() {
@@ -280,9 +233,35 @@ title: Stocks Home
      try {
         const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
         const data = await response.json();
+        console.log(data);
         // Extract timestamps and prices
         const timestamps = data?.chart?.result?.[0]?.timestamp;
         const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
+        const stockName = data?.chart?.result?.[0]?.meta?.longName;
+        const stockPrice = data?.chart?.result?.[0]?.meta?.regularMarketPrice;
+        const percentChange = await getPercentChange(stockSymbol);
+        document.getElementById('stock-name').textContent = `${stockName} (${stockSymbol})`;
+        document.getElementById('stock-symbol').textContent = `NASDAQ: ${stockSymbol}`;
+        document.getElementById('stock-price').textContent = `$${stockPrice.toFixed(2)}`;
+        const changeElement = document.getElementById('stock-change');
+        changeElement.textContent = `${percentChange}%`;
+        if (percentChange < 0) {
+            changeElement.classList.add("negative");
+            changeElement.classList.remove("positive");
+        } else {
+            changeElement.classList.add("positive");
+            changeElement.classList.remove("negative");
+        }
+        const volume = data?.chart?.result?.[0]?.meta?.regularMarketVolume;
+        const dayHigh = data?.chart?.result?.[0]?.meta?.regularMarketDayHigh;
+        const dayLow = data?.chart?.result?.[0]?.meta?.regularMarketDayLow;
+        const yearHigh = data?.chart?.result?.[0]?.meta?.fiftyTwoWeekHigh;
+        const yearLow = data?.chart?.result?.[0]?.meta?.fiftyTwoWeekLow;
+        document.getElementById('volume').textContent = volume ? volume.toLocaleString() : 'N/A';
+        document.getElementById('day-high').textContent = dayHigh ? `$${dayHigh.toFixed(2)}` : 'N/A';
+        document.getElementById('year-high').textContent = dayHigh ? `$${yearHigh.toFixed(2)}` : 'N/A';
+        document.getElementById('day-low').textContent = dayLow ? `$${dayLow.toFixed(2)}` : 'N/A';
+        document.getElementById('year-low').textContent = dayLow ? `$${yearLow.toFixed(2)}` : 'N/A';
         // Check if data exists
         if (timestamps && prices) {
                 // Convert timestamps to readable dates
@@ -296,6 +275,40 @@ title: Stocks Home
             console.error('Error fetching stock data:', error);
             document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
         }
+        }
+async function getPercentChange(stockSymbol) {
+        try {
+            const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
+            const data = await response.json();
+            console.log(data);
+            const newValue = data?.chart?.result?.[0]?.meta?.regularMarketPrice;
+            const oldValue = data?.chart?.result?.[0]?.meta?.chartPreviousClose;
+            const percentChange = ((newValue - oldValue) / oldValue) * 100;
+            //const outputElement = document.getElementById("output");
+            if (percentChange !== undefined) {
+                //outputElement.textContent = `The price of ${stock} is: $${price}`;
+                return percentChange.toFixed(2);
+            } else {
+                outputElement.textContent = `Price not found for ${stockSymbol}.`;
+                console.error(`Price not found for ${stockSymbol}. Response structure:`, data);
+            }
+        } catch (error) {
+            console.error('Error fetching stock data:', error);
+            document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
+        }
+        }
+async function selectStock(stock) {
+    const selectedStockElement = document.querySelector(`.stock-item[onclick="selectStock('${stock}')"]`);
+    if (selectedStockElement) {
+        selectedStockElement.classList.add("selected");
+        currentlySelectedStock = selectedStockElement;
+    }
+    try {
+        const response = await fetch(`http://localhost:8085/api/stocks/${stock}`);
+        const data = await response.json();
+    } catch (error) {
+        console.error('Error fetching stock data:', error);
+    }
 }
 function displayChart(labels, prices, tickerSymbol) {
     const ctx = document.getElementById('stockChart').getContext('2d');
@@ -363,51 +376,3 @@ function displayChart(labels, prices, tickerSymbol) {
         }
     });
 }
-async function getStockPrice(stock) {
-        try {
-            const response = await fetch(`http://localhost:8085/api/stocks/${stock}`);
-            const data = await response.json();
-            console.log(data);
-            const price = data?.chart?.result?.[0]?.meta?.regularMarketPrice;
-            const outputElement = document.getElementById("output");
-            if (price !== undefined) {
-                //outputElement.textContent = `The price of ${stock} is: $${price}`;
-                return(price)
-            } else {
-                outputElement.textContent = `Price not found for ${stock}.`;
-                console.error(`Price not found for ${stock}. Response structure:`, data);
-            }
-        } catch (error) {
-            console.error('Error fetching stock data:', error);
-            document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
-        }
-return new Promise((resolve) => {
-                setTimeout(() => {
-                    resolve(prices[symbol]);
-                }, 0); // Simulate network delay
-            }); 
-      }
-      document.addEventListener("DOMContentLoaded", () => {
-            updateStockPrices(); // Call the function after DOM is fully loaded
-        });
-async function updateStockPrices() {
-            const stockSymbols = ['Netflix', 'Tesla', 'Amazon', 'Adobe', 'Nvidia', 'Spotify', 'Apple', 'Google', 'Facebook', 'Microsoft'];
-            const tickerSymbols = ['NFLX', 'TSLA', 'AMZN', 'ADBE', 'NVDA', 'SPOT', 'AAPL', 'GOOG', 'META', 'MSFT'];
-            const tickerPrices = [];
-            counter = 0; 
-            for (const stock of tickerSymbols) {
-                const price = await getStockPrice(stock);
-                tickerPrices.push(price)              
-                const priceElement = document.getElementById(stockSymbols[counter] + "Price");
-                if (priceElement) {
-                    priceElement.textContent = `$${price}`;
-                } else {
-                    console.error(`Element with ID ${stock + "Price"} not found.`);
-                }
-                counter++;                 
-                //console.log(price);
-                //console.log(tickerPrices);
-                //console.log(priceElement);
-                //console.log(counter);
-            }
-        }
