added buy/sell button + appear on search

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -79,15 +79,16 @@ title: Stocks Buy/Sell
             width: 80%;
             padding: 20px;
         }
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 30px;
+        }
         .header h1 {
             font-size: 2em;
             font-weight: bold;
-            margin: 30px;
-        }
-        .header p {
-            color: #777;
-            margin-bottom: 20px;
-            margin: 30px;
+            margin: 0;
         }
         .price-info h2 {
             font-size: 2.5em;
@@ -167,6 +168,48 @@ title: Stocks Buy/Sell
             font-size: 24px;
             color: #999;
             flex: 1;
+        }.buy-sell-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
+        .buy-button, .sell-button {
+            padding: 12px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            color: #fff;
+        }
+        .buy-sell-buttons {
+            display: flex;
+            gap: 15px;
+        }
+        .buy-button, .sell-button {
+            padding: 10px 15px;
+            font-size: 16px;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            color: #fff;
+        }
+        .buy-button {
+            background-color: #388e3c; /* Green for buy */
+        }
+        .buy-button:hover {
+            background-color: #2e7d32;
+        }
+        .sell-button {
+            background-color: #d32f2f; /* Red for sell */
+        }
+        .sell-button:hover {
+            background-color: #c62828;
         }
     </style>
 </head>
@@ -179,71 +222,84 @@ title: Stocks Buy/Sell
             <a href="{{site.baseurl}}/stocks/viewer">Stocks</a>
             <a href="{{site.baseurl}}/stocks/portfolio">Portfolio</a>
             <a href="{{site.baseurl}}/stocks/buysell">Buy/Sell</a>
-            <a href="#">Upgrades</a> <!-- Added "Upgrades" button -->
+            <a href="#">Upgrades</a>
             <a href="#">Profile</a>
         </div>
     </nav>
     <div class="search-container">
-               <input type="text" id="searchBar" placeholder="Search...">
-               <button class="search-button" onclick="getStockData()">Search</button> <!-- Search button added -->
+        <input type="text" id="searchBar" placeholder="Search...">
+        <button class="search-button" onclick="getStockData()">Search</button>
     </div>
-    <!-- Header -->
-      <div class="header">
-        <h1 id="stock-name">N/A</h1>
-        <p id="stock-symbol">NASDAQ: N/A</p>
-      </div>
-      <!-- Price Info -->
-      <div class="price-info">
-        <h2 id="stock-price">N/A</h2>
-        <p id="stock-change" class="change positive">N/A</p>
-      </div>
-    <div class="summary-cards">
-                <div class="card card-orange">
-                    <h2>Volume:</h2>
-                    <p id="volume">N/A</p>
-                </div>
-                <div class="card card-purple">
-                    <h2>Day High:</h2>
-                    <p id="day-high">N/A</p>
-                </div>
-                <div class="card card-darkblue">
-                    <h2>52-Week High:</h2>
-                    <p id="year-high">N/A</p>
-                </div>
-                <div class="card card-darkblue">
-                    <h2>Day Low:</h2>
-                    <p id="day-low">N/A</p>
-                </div>
-                <div class="card card-darkblue">
-                    <h2>52-Week Low:</h2>
-                    <p id="year-low">N/A</p>
-                </div>
-    </div>
-    <div class="chart-container" id="chartContainer">
-                <div class="chart" id="chart1">
-                    <canvas id="stockChart" width="475" height="375">[Graph Placeholder]</canvas>
-                </div>
+    <!-- Content to display only after search -->
+    <div id="stock-content" style="display: none;">
+        <!-- Header with stock name and Buy/Sell buttons on the same line -->
+        <div class="header">
+            <div>
+                <h1 id="stock-name">N/A</h1>
+                <p id="stock-symbol">NASDAQ: N/A</p>
             </div>
-            <div id="output" style="color: red; padding-top: 10px;"></div>
+            <div class="buy-sell-buttons">
+                <button class="buy-button">Buy</button>
+                <button class="sell-button">Sell</button>
+            </div>
+        </div>
+        <!-- Price Info -->
+        <div class="price-info">
+            <h2 id="stock-price">N/A</h2>
+            <p id="stock-change" class="change positive">N/A</p>
+        </div>
+        <!-- Summary Cards -->
+        <div class="summary-cards">
+            <div class="card card-darkblue">
+                <h2>Volume:</h2>
+                <p id="volume">N/A</p>
+            </div>
+            <div class="card card-purple">
+                <h2>Day High:</h2>
+                <p id="day-high">N/A</p>
+            </div>
+            <div class="card card-orange">
+                <h2>52-Week High:</h2>
+                <p id="year-high">N/A</p>
+            </div>
+            <div class="card card-purple">
+                <h2>Day Low:</h2>
+                <p id="day-low">N/A</p>
+            </div>
+            <div class="card card-darkblue">
+                <h2>52-Week Low:</h2>
+                <p id="year-low">N/A</p>
+            </div>
+        </div>
+        <!-- Chart Container -->
+        <div class="chart-container" id="chartContainer">
+            <div class="chart" id="chart1">
+                <canvas id="stockChart" width="475" height="375">[Graph Placeholder]</canvas>
+            </div>
+        </div>
+    </div>
+    <div id="output" style="color: red; padding-top: 10px;"></div>
     <script>
-    let stockChart; // Declare stockChart globally
+     let stockChart;
     async function getStockData() {
         const stockSymbol = document.getElementById("searchBar").value;
         document.getElementById("output").textContent = ""; // Clear previous messages
-     try {
-        const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
-        const data = await response.json();
-        console.log(data);
-        // Extract timestamps and prices
-        const timestamps = data?.chart?.result?.[0]?.timestamp;
-        const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
-        const stockName = data?.chart?.result?.[0]?.meta?.longName;
-        const stockPrice = data?.chart?.result?.[0]?.meta?.regularMarketPrice;
-        const percentChange = await getPercentChange(stockSymbol);
-        document.getElementById('stock-name').textContent = `${stockName} (${stockSymbol})`;
-        document.getElementById('stock-symbol').textContent = `NASDAQ: ${stockSymbol}`;
-        document.getElementById('stock-price').textContent = `$${stockPrice.toFixed(2)}`;
-        const changeElement = document.getElementById('stock-change');
+        try {
+            const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
+            const data = await response.json();
+            if (data?.chart?.result) {
+                // Show stock content container if data is found
+                document.getElementById("stock-content").style.display = "block";
+                // Display data in HTML elements as in your original script
+                const timestamps = data.chart.result[0].timestamp;
+                const prices = data.chart.result[0].indicators.quote[0].close;
+                const stockName = data.chart.result[0].meta.longName;
+                const stockPrice = data.chart.result[0].meta.regularMarketPrice;
+                const percentChange = await getPercentChange(stockSymbol);
+                document.getElementById('stock-name').textContent = `${stockName} (${stockSymbol})`;
+                document.getElementById('stock-symbol').textContent = `NASDAQ: ${stockSymbol}`;
+                document.getElementById('stock-price').textContent = `$${stockPrice.toFixed(2)}`;
+                const changeElement = document.getElementById('stock-change');
         changeElement.textContent = `${percentChange}%`;
         if (percentChange < 0) {
             changeElement.classList.add("negative");
@@ -270,12 +326,14 @@ title: Stocks Buy/Sell
             } else {
                 console.error(`Data not found for ${stockSymbol}. Response structure:`, data);
                 document.getElementById("output").textContent = `Data not found for ${stockSymbol}.`;
+                document.getElementById("stock-content").style.display = "none"; // Hide content if no data
             }
-        } catch (error) {
+        } } catch (error) {
             console.error('Error fetching stock data:', error);
             document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
+            document.getElementById("stock-content").style.display = "none"; // Hide content on error
         }
-        }
+    }
 async function getPercentChange(stockSymbol) {
         try {
             const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
