working add/remove

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -239,8 +239,8 @@ title: Stocks Buy/Sell
                 <p id="stock-symbol">NASDAQ: N/A</p>
             </div>
             <div class="buy-sell-buttons">
-                <button class="buy-button">Buy</button>
-                <button class="sell-button">Sell</button>
+                <button class="buy-button" onclick="buyStock()">Buy</button>
+                <button class="sell-button" onclick="removeStock()">Sell</button>
             </div>
         </div>
         <!-- Price Info -->
@@ -433,4 +433,62 @@ function displayChart(labels, prices, tickerSymbol) {
             }
         }
     });
+}
+async function buyStock() {
+    const stockSymbol = document.getElementById("searchBar").value; // Get the stock symbol from the search bar
+    const outputElement = document.getElementById("output");
+    outputElement.textContent = ""; // Clear previous messages
+    console.log(stockSymbol);
+    try {
+        const response = await fetch ('http://localhost:8085/user/addStock', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                username: "testUser4",
+                quantity: "1",
+                stockSymbol: stockSymbol
+            })
+        });
+        if (response.ok) {
+            outputElement.textContent = `${stockSymbol} has been added to your portfolio.`;
+            console.log(`Successfully added 1 share of ${stockSymbol} to the portfolio.`);
+        } else {
+            outputElement.textContent = `Failed to add ${stockSymbol}. Please try again.`;
+            console.error(`Failed to add ${stockSymbol}. Status code:`, response.status);
+        }
+    } catch (error) {
+        console.error('Error adding stock:', error);
+        outputElement.textContent = "Error adding stock. Please try again later.";
+    }
+}
+async function removeStock() {
+    const stockSymbol = document.getElementById("searchBar").value; // Get the stock symbol from the search bar
+    const outputElement = document.getElementById("output");
+    outputElement.textContent = ""; // Clear previous messages
+    console.log(stockSymbol);
+    try {
+        const response = await fetch ('http://localhost:8085/user/removeStock', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                username: "testUser4",
+                quantity: "1",
+                stockSymbol: stockSymbol
+            })
+        });
+        if (response.ok) {
+            outputElement.textContent = `${stockSymbol} has been removed to your portfolio.`;
+            console.log(`Successfully removed 1 share of ${stockSymbol} to the portfolio.`);
+        } else {
+            outputElement.textContent = `Failed to remove ${stockSymbol}. Please try again.`;
+            console.error(`Failed to remove ${stockSymbol}. Status code:`, response.status);
+        }
+    } catch (error) {
+        console.error('Error removing stock:', error);
+        outputElement.textContent = "Error removing stock. Please try again later.";
+    }
 }
