user message for buy sell

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -90,6 +90,23 @@ title: Stocks Buy/Sell
             font-weight: bold;
             margin: 0;
         }
+        .buy-sell-buttons-container {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end; /* Align the buysell text to the right */
+        }
+        .buysell {
+            margin-top: 10px; /* Add some space between buttons and the buysell text */
+            text-align: right;
+        }
+        .buysell.negative {
+            color: #d32f2f; /* Red for negative change */
+            margin-left: 30px;
+        }
+        .buysell.positive {
+            color: #388e3c;
+            justify-items: right; 
+        }
         .price-info h2 {
             font-size: 2.5em;
             font-weight: bold;
@@ -104,13 +121,13 @@ title: Stocks Buy/Sell
             margin-left: 30px;
         }
         .metrics {
-                display: flex;
+            display: flex;
             gap: 15px;
             margin: 20px 0;
         }
         .metric {
             background-color: #ffffff;
-                border: 1px solid #ddd;
+            border: 1px solid #ddd;
             padding: 15px;
             border-radius: 4px;
             text-align: center;
@@ -233,16 +250,20 @@ title: Stocks Buy/Sell
     <!-- Content to display only after search -->
     <div id="stock-content" style="display: none;">
         <!-- Header with stock name and Buy/Sell buttons on the same line -->
-        <div class="header">
-            <div>
-                <h1 id="stock-name">N/A</h1>
-                <p id="stock-symbol">NASDAQ: N/A</p>
-            </div>
+        <!-- Header with stock name and Buy/Sell buttons on the same line -->
+    <div class="header">
+        <div>
+            <h1 id="stock-name">N/A</h1>
+            <p id="stock-symbol">NASDAQ: N/A</p>
+        </div>
+        <div class="buy-sell-buttons-container">
             <div class="buy-sell-buttons">
                 <button class="buy-button" onclick="buyStock()">Buy</button>
                 <button class="sell-button" onclick="removeStock()">Sell</button>
             </div>
+            <p class="buysell" id="buysell"></p>
         </div>
+    </div>
         <!-- Price Info -->
         <div class="price-info">
             <h2 id="stock-price">N/A</h2>
@@ -284,6 +305,7 @@ title: Stocks Buy/Sell
     async function getStockData() {
         const stockSymbol = document.getElementById("searchBar").value;
         document.getElementById("output").textContent = ""; // Clear previous messages
+        document.getElementById("buysell").textContent = ""; // Clear previous messages
         try {
             const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
             const data = await response.json();
@@ -451,8 +473,12 @@ async function buyStock() {
                 stockSymbol: stockSymbol
             })
         });
+        const changeElement = document.getElementById('buysell');
         if (response.ok) {
             outputElement.textContent = `${stockSymbol} has been added to your portfolio.`;
+            changeElement.textContent = `${stockSymbol} has been bought`;
+            changeElement.classList.add("positive");
+            changeElement.classList.remove("negative");
             console.log(`Successfully added 1 share of ${stockSymbol} to the portfolio.`);
         } else {
             outputElement.textContent = `Failed to add ${stockSymbol}. Please try again.`;
@@ -480,8 +506,12 @@ async function removeStock() {
                 stockSymbol: stockSymbol
             })
         });
+        const changeElement = document.getElementById('buysell');
         if (response.ok) {
             outputElement.textContent = `${stockSymbol} has been removed to your portfolio.`;
+            changeElement.textContent = `${stockSymbol} has been removed`;
+            changeElement.classList.add("negative");
+            changeElement.classList.remove("positive");
             console.log(`Successfully removed 1 share of ${stockSymbol} to the portfolio.`);
         } else {
             outputElement.textContent = `Failed to remove ${stockSymbol}. Please try again.`;
