displaying the quantity

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -262,6 +262,7 @@ title: Stocks Buy/Sell
                 <button class="sell-button" onclick="removeStock()">Sell</button>
             </div>
             <p class="buysell" id="buysell"></p>
+            <p class="userStock" id="userStock"></p>
         </div>
     </div>
         <!-- Price Info -->
@@ -462,7 +463,7 @@ async function buyStock() {
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
     try {
-        const response = await fetch ('http://localhost:8085/user/addStock', {
+        const response = await fetch('http://localhost:8085/user/addStock', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -474,11 +475,19 @@ async function buyStock() {
             })
         });
         const changeElement = document.getElementById('buysell');
+        const userElement = document.getElementById('userStock');
+        // Fetch updated user stock list after buying the stock
+        const userStocks = await getUserStock("testUser4");
         if (response.ok) {
+            // Find the stock in userStocks and get its updated quantity
+            const stock = userStocks.find(s => s.stockSymbol === stockSymbol);
+            const updatedQuantity = stock ? stock.quantity : 1; // Default to 1 if stock is newly added
             outputElement.textContent = `${stockSymbol} has been added to your portfolio.`;
             changeElement.textContent = `${stockSymbol} has been bought`;
             changeElement.classList.add("positive");
             changeElement.classList.remove("negative");
+            // Display the updated quantity of the bought stock
+            userElement.textContent = `${stockSymbol} current quantity: ${updatedQuantity}`;
             console.log(`Successfully added 1 share of ${stockSymbol} to the portfolio.`);
         } else {
             outputElement.textContent = `Failed to add ${stockSymbol}. Please try again.`;
@@ -495,7 +504,7 @@ async function removeStock() {
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
     try {
-        const response = await fetch ('http://localhost:8085/user/removeStock', {
+        const response = await fetch('http://localhost:8085/user/removeStock', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -507,12 +516,19 @@ async function removeStock() {
             })
         });
         const changeElement = document.getElementById('buysell');
+        const userElement = document.getElementById('userStock');
+        const userStocks = await getUserStock("testUser4");
         if (response.ok) {
-            outputElement.textContent = `${stockSymbol} has been removed to your portfolio.`;
+            // Find the stock in userStocks and get its remaining quantity
+            const stock = userStocks.find(s => s.stockSymbol === stockSymbol);
+            const remainingQuantity = stock ? stock.quantity : 0; // If not found, assume 0
+            outputElement.textContent = `${stockSymbol} has been removed from your portfolio.`;
             changeElement.textContent = `${stockSymbol} has been removed`;
             changeElement.classList.add("negative");
             changeElement.classList.remove("positive");
-            console.log(`Successfully removed 1 share of ${stockSymbol} to the portfolio.`);
+            // Display the updated user stocks with quantities
+            userElement.textContent = `${stockSymbol} remaining quantity: ${remainingQuantity}`;
+            console.log(`Successfully removed 1 share of ${stockSymbol} from the portfolio.`);
         } else {
             outputElement.textContent = `Failed to remove ${stockSymbol}. Please try again.`;
             console.error(`Failed to remove ${stockSymbol}. Status code:`, response.status);
@@ -522,3 +538,13 @@ async function removeStock() {
         outputElement.textContent = "Error removing stock. Please try again later.";
     }
 }
+async function getUserStock(user) {
+            try {
+                const response = await fetch(`http://localhost:8085/user/getStocks?username=${user}`);
+                const stocksData = await response.json();
+                return stocksData;
+            } catch (error) {
+                console.error("Error fetching user stocks:", error);
+                return [];
+            }
+        }
