--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -307,6 +307,7 @@ title: Stocks Buy/Sell
         const stockSymbol = document.getElementById("searchBar").value;
         document.getElementById("output").textContent = ""; // Clear previous messages
         document.getElementById("buysell").textContent = ""; // Clear previous messages
+        document.getElementById("userStock").textContent = ""; // Clear previous messages
         try {
             const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
             const data = await response.json();
