--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -244,7 +244,7 @@ title: Stocks Buy/Sell
         </div>
     </nav>
     <div class="search-container">
-        <input type="text" id="searchBar" placeholder="Search...">
+        <input type="text" id="searchBar" placeholder="Search..." oninput="this.value = this.value.toUpperCase()">
         <button class="search-button" onclick="getStockData()">Search</button>
     </div>
     <!-- Content to display only after search -->
